# Smooth-Operator

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  README.md  decoder.cpp  decoder.h  decoder_error.h  encoder.cpp  encoder.h  payload_decoder.cpp  payload_decoder.h  payload_encoder.cpp  payload_encoder.h  protocol.cpp  protocol.h
lib/test/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp  payload_decoder_test.cpp  payload_encoder_test.cpp  protocol_test.cpp
